[package]
name = "pong"
version = "0.1.0"
authors = ["Nicholas Benson <nickjbenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15"
# Use metal for MacOS, vulkan for everything else.
# features = ["vulkan"]
features = ["metal"]

# # [target.'cfg(target_os = "macos")'.dependencies.amethyst]
# # version = "0.15"
# # features = ["metal"]
# # [target.'cfg(not(target_os = "macos"))'.dependencies.amethyst]
# # version = "0.15"
# # features = ["vulkan"]
# # # [target.'cfg(linux)'.dependencies.amethyst]
# # # features = ["vulkan"]
