[package]
name = "bevy_template"
version = "0.1.0"
authors = ["Unknown Author <unknown@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "5288ec98593cab946d1f960da7b8d73607ff7414" }
